--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
