--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
