--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,14 @@
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
