--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "next": "^14.2.4",
